Fix composer.json file bug

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Melogail\\LaravelReviews\\Providers\\LaravelReviewsServiceProvider\\"
+                "Melogail\\LaravelReviews\\Providers\\LaravelReviewsServiceProvider"
             ]
         }
     }
